{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 176,
  "lineage": "13c6241b-bd3e-b032-be93-c04cd19936b6",
  "resources": [
    {
      "module": "module.aws-vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "cluster-nat-eip",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-050c13d7f8915850f",
            "public_dns": "ec2-35-177-3-139.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.177.3.139",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-07a1485039aed5260",
            "public_dns": "ec2-18-130-5-128.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.130.5.128",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.aws-elb",
      "mode": "managed",
      "type": "aws_elb",
      "name": "aws-elb-api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:357981248737:loadbalancer/kubernetes-elb-kubespray-cluster",
            "availability_zones": [
              "eu-west-2a",
              "eu-west-2b"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "dns_name": "kubernetes-elb-kubespray-cluster-1087509512.eu-west-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "TCP:6443",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "kubernetes-elb-kubespray-cluster",
            "idle_timeout": 400,
            "internal": false,
            "listener": [
              {
                "instance_port": 6443,
                "instance_protocol": "tcp",
                "lb_port": 6443,
                "lb_protocol": "tcp"
              }
            ],
            "name": "kubernetes-elb-kubespray-cluster",
            "security_groups": [
              "sg-03f9cc8b860e3856a"
            ],
            "source_security_group": "357981248737/kubernetes-kubespray-cluster-securitygroup-elb",
            "source_security_group_id": "sg-03f9cc8b860e3856a",
            "subnets": [
              "subnet-037d09d756d7eaeb7",
              "subnet-0660f91400078eb27"
            ],
            "tags": {
              "Name": "kubernetes-kubespray-cluster-elb-api"
            },
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "module.aws-elb.aws_security_group.aws-elb",
            "module.aws-vpc.aws_subnet.cluster-vpc-subnets-public",
            "module.aws-vpc.aws_vpc.cluster-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion-server",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00f6a0c18edb19300",
            "arn": "arn:aws:ec2:eu-west-2:357981248737:instance/i-0bae163d796b9223c",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bae163d796b9223c",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vagrant-keypair_public",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ce4b85e0d9e841b9",
            "private_dns": "ip-10-250-232-224.eu-west-2.compute.internal",
            "private_ip": "10.250.232.224",
            "public_dns": "ec2-35-178-185-245.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.178.185.245",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0c64fbbe84091949b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0660f91400078eb27",
            "tags": {
              "Cluster": "kubespray-cluster",
              "Name": "kubernetes-kubespray-cluster-bastion-0",
              "Role": "bastion-kubespray-cluster-0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0741007ba31af29c9"
            ]
          },
          "dependencies": [
            "module.aws-vpc.aws_security_group.kubernetes",
            "module.aws-vpc.aws_subnet.cluster-vpc-subnets-public",
            "module.aws-vpc.aws_vpc.cluster-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-018f0531ef721f4f2",
            "arn": "arn:aws:ec2:eu-west-2:357981248737:instance/i-0d63085527f98a4ff",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d63085527f98a4ff",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vagrant-keypair_public",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01d1c4fdeff9b144a",
            "private_dns": "ip-10-250-207-190.eu-west-2.compute.internal",
            "private_ip": "10.250.207.190",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-03b29e872d27a1522",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ac1620f594cecc9c",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0741007ba31af29c9"
            ]
          },
          "dependencies": [
            "module.aws-vpc.aws_security_group.kubernetes",
            "module.aws-vpc.aws_subnet.cluster-vpc-subnets-private",
            "module.aws-vpc.aws_vpc.cluster-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s-etcd",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00f6a0c18edb19300",
            "arn": "arn:aws:ec2:eu-west-2:357981248737:instance/i-0557200e8533eebb5",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0557200e8533eebb5",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vagrant-keypair_public",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-073d8bfaab01cd3bf",
            "private_dns": "ip-10-250-196-145.eu-west-2.compute.internal",
            "private_ip": "10.250.196.145",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-00ac1b49a946f9138",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ac1620f594cecc9c",
            "tags": {
              "Name": "kubernetes-kubespray-cluster-etcd0",
              "Role": "etcd",
              "kubernetes.io/cluster/kubespray-cluster": "owned"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0741007ba31af29c9"
            ]
          },
          "dependencies": [
            "module.aws-vpc.aws_security_group.kubernetes",
            "module.aws-vpc.aws_subnet.cluster-vpc-subnets-private",
            "module.aws-vpc.aws_vpc.cluster-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s-master",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00f6a0c18edb19300",
            "arn": "arn:aws:ec2:eu-west-2:357981248737:instance/i-059ff76a1d50f13f3",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "EC2-admin-policy",
            "id": "i-059ff76a1d50f13f3",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "vagrant-keypair_public",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e5582d9ebd4aae4c",
            "private_dns": "ip-10-250-205-91.eu-west-2.compute.internal",
            "private_ip": "10.250.205.91",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-08ae38e6cdbc03b16",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ac1620f594cecc9c",
            "tags": {
              "Name": "kubernetes-kubespray-cluster-master0",
              "Role": "master",
              "kubernetes.io/cluster/kubespray-cluster": "owned"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0741007ba31af29c9"
            ]
          },
          "dependencies": [
            "module.aws-vpc.aws_security_group.kubernetes",
            "module.aws-vpc.aws_subnet.cluster-vpc-subnets-private",
            "module.aws-vpc.aws_vpc.cluster-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s-worker",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00f6a0c18edb19300",
            "arn": "arn:aws:ec2:eu-west-2:357981248737:instance/i-0bcdfb263c6168fd3",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "EC2-admin-policy",
            "id": "i-0bcdfb263c6168fd3",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "vagrant-keypair_public",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-042fe7dfe4b2b455d",
            "private_dns": "ip-10-250-192-48.eu-west-2.compute.internal",
            "private_ip": "10.250.192.48",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-045874e1330ffb611",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ac1620f594cecc9c",
            "tags": {
              "Name": "kubernetes-kubespray-cluster-worker0",
              "Role": "worker",
              "kubernetes.io/cluster/kubespray-cluster": "owned"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0741007ba31af29c9"
            ]
          },
          "dependencies": [
            "module.aws-vpc.aws_security_group.kubernetes",
            "module.aws-vpc.aws_subnet.cluster-vpc-subnets-private",
            "module.aws-vpc.aws_vpc.cluster-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "cluster-vpc-internetgw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:357981248737:internet-gateway/igw-0456b4c22c695d044",
            "id": "igw-0456b4c22c695d044",
            "owner_id": "357981248737",
            "tags": {
              "Name": "kubernetes-kubespray-cluster-internetgw",
              "kubernetes.io/cluster/kubespray-cluster": "owned"
            },
            "vpc_id": "vpc-047eafad5925c823f"
          },
          "dependencies": [
            "module.aws-vpc.aws_vpc.cluster-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "cluster-nat-gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-050c13d7f8915850f",
            "id": "nat-0b19b4322bbe2adb9",
            "network_interface_id": "eni-013c4f8d075c64f4c",
            "private_ip": "10.250.225.215",
            "public_ip": "35.177.3.139",
            "subnet_id": "subnet-0660f91400078eb27"
          },
          "dependencies": [
            "module.aws-vpc.aws_eip.cluster-nat-eip",
            "module.aws-vpc.aws_subnet.cluster-vpc-subnets-public",
            "module.aws-vpc.aws_vpc.cluster-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07a1485039aed5260",
            "id": "nat-09c0a241fd6cad13a",
            "network_interface_id": "eni-085e1e8c53ab14447",
            "private_ip": "10.250.240.135",
            "public_ip": "18.130.5.128",
            "subnet_id": "subnet-037d09d756d7eaeb7"
          },
          "dependencies": [
            "module.aws-vpc.aws_eip.cluster-nat-eip",
            "module.aws-vpc.aws_subnet.cluster-vpc-subnets-public",
            "module.aws-vpc.aws_vpc.cluster-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "kubernetes-private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0176c65ccc543ccc6",
            "owner_id": "357981248737",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0b19b4322bbe2adb9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kubernetes-kubespray-cluster-routetable-private-0",
              "kubernetes.io/cluster/kubespray-cluster": "owned"
            },
            "vpc_id": "vpc-047eafad5925c823f"
          },
          "dependencies": [
            "module.aws-vpc.aws_eip.cluster-nat-eip",
            "module.aws-vpc.aws_nat_gateway.cluster-nat-gateway",
            "module.aws-vpc.aws_subnet.cluster-vpc-subnets-public",
            "module.aws-vpc.aws_vpc.cluster-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-017320b30daff656c",
            "owner_id": "357981248737",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-09c0a241fd6cad13a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kubernetes-kubespray-cluster-routetable-private-1",
              "kubernetes.io/cluster/kubespray-cluster": "owned"
            },
            "vpc_id": "vpc-047eafad5925c823f"
          },
          "dependencies": [
            "module.aws-vpc.aws_eip.cluster-nat-eip",
            "module.aws-vpc.aws_nat_gateway.cluster-nat-gateway",
            "module.aws-vpc.aws_subnet.cluster-vpc-subnets-public",
            "module.aws-vpc.aws_vpc.cluster-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "kubernetes-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-067df95786a0ffbf3",
            "owner_id": "357981248737",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0456b4c22c695d044",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kubernetes-kubespray-cluster-routetable-public",
              "kubernetes.io/cluster/kubespray-cluster": "owned"
            },
            "vpc_id": "vpc-047eafad5925c823f"
          },
          "dependencies": [
            "module.aws-vpc.aws_internet_gateway.cluster-vpc-internetgw",
            "module.aws-vpc.aws_vpc.cluster-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "kubernetes-private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06811a708c78559fc",
            "route_table_id": "rtb-0176c65ccc543ccc6",
            "subnet_id": "subnet-0ac1620f594cecc9c"
          },
          "dependencies": [
            "module.aws-vpc.aws_eip.cluster-nat-eip",
            "module.aws-vpc.aws_nat_gateway.cluster-nat-gateway",
            "module.aws-vpc.aws_route_table.kubernetes-private",
            "module.aws-vpc.aws_subnet.cluster-vpc-subnets-private",
            "module.aws-vpc.aws_subnet.cluster-vpc-subnets-public",
            "module.aws-vpc.aws_vpc.cluster-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-066fc154b9935cfb7",
            "route_table_id": "rtb-017320b30daff656c",
            "subnet_id": "subnet-0bad49c116af10e95"
          },
          "dependencies": [
            "module.aws-vpc.aws_eip.cluster-nat-eip",
            "module.aws-vpc.aws_nat_gateway.cluster-nat-gateway",
            "module.aws-vpc.aws_route_table.kubernetes-private",
            "module.aws-vpc.aws_subnet.cluster-vpc-subnets-private",
            "module.aws-vpc.aws_subnet.cluster-vpc-subnets-public",
            "module.aws-vpc.aws_vpc.cluster-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "kubernetes-public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-009d59d3fb9efec80",
            "route_table_id": "rtb-067df95786a0ffbf3",
            "subnet_id": "subnet-0660f91400078eb27"
          },
          "dependencies": [
            "module.aws-vpc.aws_internet_gateway.cluster-vpc-internetgw",
            "module.aws-vpc.aws_route_table.kubernetes-public",
            "module.aws-vpc.aws_subnet.cluster-vpc-subnets-public",
            "module.aws-vpc.aws_vpc.cluster-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf10faa1f761b1e1",
            "route_table_id": "rtb-067df95786a0ffbf3",
            "subnet_id": "subnet-037d09d756d7eaeb7"
          },
          "dependencies": [
            "module.aws-vpc.aws_internet_gateway.cluster-vpc-internetgw",
            "module.aws-vpc.aws_route_table.kubernetes-public",
            "module.aws-vpc.aws_subnet.cluster-vpc-subnets-public",
            "module.aws-vpc.aws_vpc.cluster-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-elb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws-elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:357981248737:security-group/sg-03f9cc8b860e3856a",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-03f9cc8b860e3856a",
            "ingress": [],
            "name": "kubernetes-kubespray-cluster-securitygroup-elb",
            "name_prefix": null,
            "owner_id": "357981248737",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kubernetes-kubespray-cluster-securitygroup-elb"
            },
            "timeouts": null,
            "vpc_id": "vpc-047eafad5925c823f"
          },
          "dependencies": [
            "module.aws-vpc.aws_vpc.cluster-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kubernetes",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:357981248737:security-group/sg-0741007ba31af29c9",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0741007ba31af29c9",
            "ingress": [],
            "name": "kubernetes-kubespray-cluster-securitygroup",
            "name_prefix": null,
            "owner_id": "357981248737",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kubernetes-kubespray-cluster-securitygroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-047eafad5925c823f"
          },
          "dependencies": [
            "module.aws-vpc.aws_vpc.cluster-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-all-egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3354532607",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0741007ba31af29c9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "dependencies": [
            "module.aws-vpc.aws_security_group.kubernetes",
            "module.aws-vpc.aws_vpc.cluster-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-all-ingress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.250.192.0/18"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-559688754",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0741007ba31af29c9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "module.aws-vpc.aws_security_group.kubernetes",
            "module.aws-vpc.aws_vpc.cluster-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-ssh-connections",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-2881703985",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0741007ba31af29c9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.aws-vpc.aws_security_group.kubernetes",
            "module.aws-vpc.aws_vpc.cluster-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-elb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "aws-allow-api-access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 6443,
            "id": "sgrule-4191139104",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03f9cc8b860e3856a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "dependencies": [
            "module.aws-elb.aws_security_group.aws-elb",
            "module.aws-vpc.aws_vpc.cluster-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-elb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "aws-allow-api-egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-4010552974",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03f9cc8b860e3856a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "dependencies": [
            "module.aws-elb.aws_security_group.aws-elb",
            "module.aws-vpc.aws_vpc.cluster-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "elb_port",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-491326852",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0741007ba31af29c9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "module.aws-vpc.aws_security_group.kubernetes",
            "module.aws-vpc.aws_vpc.cluster-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cluster-vpc-subnets-private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:357981248737:subnet/subnet-0ac1620f594cecc9c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.250.192.0/20",
            "id": "subnet-0ac1620f594cecc9c",
            "map_public_ip_on_launch": false,
            "owner_id": "357981248737",
            "tags": {
              "Name": "kubernetes-kubespray-cluster-eu-west-2a-private",
              "kubernetes.io/cluster/kubespray-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-047eafad5925c823f"
          },
          "dependencies": [
            "module.aws-vpc.aws_vpc.cluster-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:357981248737:subnet/subnet-0bad49c116af10e95",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.250.208.0/20",
            "id": "subnet-0bad49c116af10e95",
            "map_public_ip_on_launch": false,
            "owner_id": "357981248737",
            "tags": {
              "Name": "kubernetes-kubespray-cluster-eu-west-2b-private",
              "kubernetes.io/cluster/kubespray-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-047eafad5925c823f"
          },
          "dependencies": [
            "module.aws-vpc.aws_vpc.cluster-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cluster-vpc-subnets-public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:357981248737:subnet/subnet-0660f91400078eb27",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.250.224.0/20",
            "id": "subnet-0660f91400078eb27",
            "map_public_ip_on_launch": false,
            "owner_id": "357981248737",
            "tags": {
              "Name": "kubernetes-kubespray-cluster-eu-west-2a-public",
              "kubernetes.io/cluster/kubespray-cluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-047eafad5925c823f"
          },
          "dependencies": [
            "module.aws-vpc.aws_vpc.cluster-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:357981248737:subnet/subnet-037d09d756d7eaeb7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.250.240.0/20",
            "id": "subnet-037d09d756d7eaeb7",
            "map_public_ip_on_launch": false,
            "owner_id": "357981248737",
            "tags": {
              "Name": "kubernetes-kubespray-cluster-eu-west-2b-public",
              "kubernetes.io/cluster/kubespray-cluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-047eafad5925c823f"
          },
          "dependencies": [
            "module.aws-vpc.aws_vpc.cluster-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cluster-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:357981248737:vpc/vpc-047eafad5925c823f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.250.192.0/18",
            "default_network_acl_id": "acl-08bac5a3fb3dfc699",
            "default_route_table_id": "rtb-034941da3f0027957",
            "default_security_group_id": "sg-06515135cebe18356",
            "dhcp_options_id": "dopt-2398c74b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-047eafad5925c823f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-034941da3f0027957",
            "owner_id": "357981248737",
            "tags": {
              "Name": "kubernetes-kubespray-cluster-vpc",
              "kubernetes.io/cluster/kubespray-cluster": "owned"
            }
          }
        }
      ]
    }
  ]
}